# Kinova_gen_3_arm_simulation

./: .gitignore  Dockerfile  Project_README.md
overlay_ws/src/gen3_bottle_description/: CMakeLists.txt  package.xml
overlay_ws/src/gen3_bottle_description/launch/: gen3_with_bottle.launch.py
overlay_ws/src/gen3_bottle_description/robots/: gen3_with_bottle.xacro
overlay_ws/src/gen3_bottle_description/urdf/: bottle.xacro  gen3_with_bottle.xacro
overlay_ws/src/kortex_description_overlay/: CMakeLists.txt  package.xml
overlay_ws/src/kortex_description_overlay/robots/: gen3.xacro
overlay_ws/src/sensor_pipeline/: package.xml  setup.py
overlay_ws/src/sensor_pipeline/launch/: pipeline.launch.py
overlay_ws/src/sensor_pipeline/sensor_pipeline/: fake_imu_publisher.py  robot_controller.py  sensor_parser.py  state_estimator.py  test.py  udp_bridge.py
